--- a/css/styles.css
+++ b/css/styles.css
@@ -292,3 +292,113 @@ ul li a:hover{
 .pie-de-pagina .g2 small{
     font-size: 15px;
 }
+
+.fondo-shows{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/calavera-guitarra1.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
+    background-repeat: no-repeat;
+    padding: 60px 0px;
+    display: flex;
+    justify-content: center;
+}
+.contenedor {
+    background-color: rgba(255, 255, 255, 0.208);
+    width: 90%;
+    max-width: 1200px;
+    margin: auto;
+    padding: 40px 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+
+}
+
+.contenedor-conciertos{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+
+.contenedor-conciertos h3{
+    font-family: 'Anton', sans-serif;
+    color: #ffff;
+    font-weight: 100;
+}
+
+.contenedor-conciertos p{
+    font-family: 'Electrolize', sans-serif;
+}
+
+.titulo {
+    font-size: 24px;
+    padding: 20px 0;
+}
+
+.card {
+    border-radius: 10px;
+    min-height: 200px;
+    font-weight: bold;
+    padding: 20px;
+    position: relative;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center center;
+
+
+}
+
+.card .textos {
+    height: 100%;
+    display: grid;
+    grid-template-rows: 1fr auto;
+}
+
+.banner {
+    border-radius: 10px;
+    text-align: center;
+    padding: 20px;
+    background-size: cover;
+    background-position: center center;
+    display: grid;
+    grid-template-rows: auto auto auto;
+    align-items: center;
+}
+
+.banner ul{
+    display: grid;
+    grid-template-rows: 1fr auto;
+}
+
+.banner ul li {
+    background-color: #0000001a;
+    font-family: 'Electrolize', sans-serif;
+    color: #ffffff;
+    margin: 15px;
+    font-weight: bold;
+}
+
+.banner .boton {
+    background: #FFD600;
+    display: block;
+    width: 100%;
+    font-weight: bold;
+    font-size: 14px;
+    text-align: center;
+    padding: 10px;
+    border: none;
+    border-radius: 100px;
+    font-family: 'Roboto', sans-serif;
+    cursor: pointer;
+}
+
+.banner h3{
+    font-family: 'Anton', sans-serif;
+    color: #000000;
+}
+
+.card:hover{
+    opacity: 80%;
+    transition: .1s;
+}
