--- a/css/styles.css
+++ b/css/styles.css
@@ -437,6 +437,12 @@ ul li a:hover{
     height: 100%;
     object-fit: cover;
 }
+
+.galeria-img:hover{
+    opacity: 90%;
+    transition: .1s;
+    transform: scale(1.04);
+}
 .galeria-item{
     border: #101010 solid;
     position: relative;
@@ -452,4 +458,77 @@ ul li a:hover{
     color: #efefef;
     font-family: 'Electrolize', sans-serif;
     background-color: #131313;
+}
+
+.fondo{
+    background-color: #222222;
+    display: flex;
+    justify-content: center;
+}
+.container-sponsor{
+    width: 900px;
+    height: 100%;
+    background-color: #353535;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.756);
+}
+
+.sponsor-titulo{
+    margin: 90px;
+    text-align: center;
+    font-family: 'Anton', sans-serif;
+    color: #ffffff;
+    font-size: 40px;
+    font-weight: 100;
+}
+
+.sponsor2{
+    display: flex;
+    justify-content: center;
+}
+.sponsor2 a img{
+    display: flex;
+    height: 200px;
+}
+.sponsor4 {
+    display: flex;
+    justify-content: center;
+}
+
+.sponsor4 a img {
+    display: flex;
+    height: 200px;
+}
+.sponsor6 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.sponsor6 a img {
+    display: flex;
+    height: 100px;
+}
+.sponsor6 .bud{
+    width: 200px;
+    height: 200px;
+}
+
+.sponsor8{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.sponsor8 a img{
+    height: 100px;
+}
+
+.sponsor10 {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.sponsor10 a img {
+    height: 300px;
 }
