--- a/css/styles.css
+++ b/css/styles.css
@@ -460,6 +460,11 @@ ul li a:hover{
     background-color: #131313;
 }
 
+.galeria-item a:hover{
+    opacity: 70%;
+    transition: .1s;
+}
+
 .fondo{
     background-color: #222222;
     display: flex;
@@ -531,4 +536,94 @@ ul li a:hover{
 
 .sponsor10 a img {
     height: 300px;
+}
+.fondo-login{
+    width: 100%;
+    height: 600px;
+    background-color: #232323;
+    display: flex;
+    justify-content: center;
+}
+.foto-login{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/calavera-guitarra.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    width: 50%;
+}
+
+.login-login h2{
+    font-size: 90px;
+    color: #ffffff;
+    font-family: 'Anton', sans-serif;
+}
+
+.formulario{
+    margin-top: 70px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    background-color: #f5f5f51b;
+}
+
+.formulario h1{
+    text-align: center;
+    padding: 0 0 20px 0;
+    border-bottom: 1px solid silver;
+}
+
+.formulario form{
+    padding: 0 40px;
+    box-sizing: border-box;
+}
+
+form .username{
+    position: relative;
+    margin: 30px 0;
+}
+
+.username input{
+    color: #ffffff;
+    width: 100%;
+    padding: 0 5px;
+    height: 40px;
+    font-size: 16px;
+    border-top: 1px;
+    background-color: #ffffff00;
+}
+.contraseña input {
+    color: #ffffff;
+    width: 100%;
+    padding: 0 5px;
+    height: 40px;
+    font-size: 16px;
+    border-top: 1px;
+    background-color: #ffffff00;
+}
+
+.recordar{
+    margin: 10px;
+}
+.registrarse{
+    margin: 10px;
+}
+.formulario{
+    color: #ffffff;
+    font-family: 'Electrolize', sans-serif;
+    text-align: center;
+}
+
+input[type="submit"]{
+    color: #ffffff;
+    background-color: #842828;
+    height: 40px;
+    width: 80px;
+    cursor: pointer;
+    outline: none;
+    border-radius: 8px;
+    border: rgba(0, 0, 0, 0) solid;
 }
