--- a/css/styles.css
+++ b/css/styles.css
@@ -227,6 +227,14 @@ body{
     padding: 40px;
 }
 
+a{
+    text-decoration: none;
+}
+
+.mapa-content a{
+    text-decoration: none;
+}
+
 .pie-de-pagina{
     font-family: 'Electrolize', sans-serif;
     width: 100%;
