terminando el footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,10 @@ body{
 
 }
 
+.info{
+    background-color: #000;
+}
+
 .section-expansion{
     background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/rasgado.png);
     background-repeat: no-repeat;
@@ -850,4 +854,6 @@ input[type="submit"]{
         display: none;
     }
 }
-
+main{
+    min-height: calc(490vh - 300px );
+}
