--- a/css/pages/shows.css
+++ b/css/pages/shows.css
@@ -1,9 +1,10 @@
-/* Error: Undefined variable.
+/* Error: Undefined mixin.
  *    ,
- * 24 |                             font-family: $tipografias-parrafos, sans-serif;
- *    |                                          ^^^^^^^^^^^^^^^^^^^^^
+ * 19 | /             @include tablet{
+ * 20 | |                 grid-template-columns: 2fr 1fr;
+ * 21 | \             }
  *    '
- *   scss\pages\shows.scss 24:42  root stylesheet */
+ *   scss\pages\shows.scss 19:13  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +14,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 24 \2502                              font-family: $tipografias-parrafos, sans-serif;\d\a    \2502                                           ^^^^^^^^^^^^^^^^^^^^^\a    \2575 \a   scss\\pages\\shows.scss 24:42  root stylesheet";
+  content: "Error: Undefined mixin.\a    \2577 \a 19 \2502  \250c              @include tablet{\a 20 \2502  \2502                  grid-template-columns: 2fr 1fr;\a 21 \2502  \2514              }\a    \2575 \a   scss\\pages\\shows.scss 19:13  root stylesheet";
 }
