--- a/scss/layout/footer.scss
+++ b/scss/layout/footer.scss
@@ -2,6 +2,12 @@
     font-family: $tipografias-titulos, sans-serif;
     width: 100%;
     background-color: rgb(0, 0, 0);
+    @include tablet{
+        display: block;
+    }
+    @include mobile{
+        display: block;
+    }
     .g1 {
             width: 100%;
             max-width: 1200px;
@@ -10,7 +16,18 @@
             grid-template-columns: repeat(3, 1fr);
             grid-gap: 50px;
             padding: 45px 0px;
+            @include mobile{
+                grid-template-columns: repeat(1, 1fr);
+                text-align: center;
+            }
+            @include tablet{
+                grid-template-columns: repeat(1, 1fr);
+                text-align: center;
+            }
             .box1{
+                @include tablet{
+                    display: none;
+                }
                 figure {
                         width: 100%;
                         height: 100%;
