--- a/scss/pages/shows.scss
+++ b/scss/pages/shows.scss
@@ -16,10 +16,23 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 20px;
+            @include tablet{
+                grid-template-columns: 2fr 1fr;
+            }
+            @include mobile{
+                margin-top: 20px;
+                grid-template-columns: 2fr 1fr;
+            }
             .contenedor-conciertos {
                     display: grid;
                     grid-template-columns: repeat(3, 1fr);
                     gap: 20px;
+                    @include tablet{
+                        grid-template-columns: repeat(2, 1fr);
+                    }
+                    @include mobile{
+                        grid-template-columns: repeat(2, 1fr);
+                    }
                     h3 {
                             font-family: $tipografias-parrafos, sans-serif;
                             color: #ffff;
