--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,9 @@
 //general
+@import './general/media.scss';
 @import './general/tipografias.scss';
+@import './general/reset.scss';
 @import './general/variables.scss';
+
 //layout
 @import './layout/header.scss';
 @import './layout/footer.scss';
